assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Quicksand:wght@500&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
  font-family: 'Quicksand', sans-serif;
  font-weight: 500;
}

/* Header: Background, logo & navigation bar*/

#header-bg {
  height: 300px;
  width: 100%;
  background-color: #45FC03;
  background-image: url('../images/main_pic.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center bottom;
}

#logo img {
  height: 300px;
  width: auto;
  float: left;
}

.nav {
  font-family: 'Fjalla One', sans-serif;
  font-weight: bold;
}

#menu {
  font-size: 130%;
  letter-spacing: 2px;
  display: flex;
  float: right;
  margin-top: 260px;
}

#menu li {
  list-style-type: none;
  margin-right: 35px;
}

#menu a {
  text-decoration: none;
  color: #000;
}

#menu a:hover {
  border-bottom: 1px solid #000;
}

.active {
  border-bottom: 2px solid #000;
}


/* Footer: Bottom side navigation */

footer {
  height: 150px;
  text-align: center;
  
}

.footer-contact li, .footer-nav li {
  display: inline;
}

.footer-contact i {
  font-size: 160%;
  padding: 0 3%;
}

.footer-nav a {
  font-size: 90%;
  margin: 1%;
  padding: 3%;
}

footer p {
  font-size: 75%;
}

